--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 alt="CSS">
               <img id="logo-image" src="https://th.bing.com/th/id/OIP.pIHu2ULXnTV83SGOzlqOmgHaHa?pid=ImgDet&w=800&h=800&rs=1"
                 alt="JavaScript">
-              <img id="logo-image" src="https://florencefennel.co.in/image/cache/catalog/florencefennel/react%20js-270x270.jpg"
+              <img id="logo-image" src="https://tse3.mm.bing.net/th?id=OIP.J0JE-fKbFT4bxpp8ilPpEQHaHa&pid=Api&P=0&w=182&h=182"
                 alt="ReactJS">
               <img id="logo-image"
                 src="https://th.bing.com/th/id/R.d42672d4d185739d26257ed5c653c740?rik=dvh0VB%2fEWz20hQ&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fnodejs-logo-png-nice-images-collection-node-js-desktop-wallpapers-370.png&ehk=bMmyN3n62enzXql6L4A5EzHc90tJxK%2bKcr6GMACTfRk%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1"
